<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.0.5</version>
		<relativePath />
	</parent>
	<packaging>pom</packaging>
	<groupId>com.jdriven</groupId>
	<artifactId>spring-security-samples</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>spring-security-samples</name>
	<description>Spring Security 5 sample projects</description>
	<properties>
		<java.version>17</java.version>
	</properties>
	<modules>
		<module>adding-spring-security</module>
		<module>access-decision-voter</module>
		<module>audit-spring-data-entities</module>
		<module>gateway</module>
		<module>limit-spring-data-queries</module>
		<module>permission-evaluator</module>
		<module>spring-cloud-gateway-oidc-tokenrelay</module>
	</modules>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>2022.0.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.10</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.diffplug.spotless</groupId>
				<artifactId>spotless-maven-plugin</artifactId>
				<version>2.37.0</version>
				<!-- https://github.com/diffplug/spotless/tree/main/plugin-maven -->
				<configuration>
					<java>
						<endWithNewline />
						<importOrder>
							<order>java,com,org,,\#</order>
						</importOrder>
						<indent>
							<tabs>true</tabs>
							<spacesPerTab>4</spacesPerTab>
						</indent>
						<removeUnusedImports />
						<trimTrailingWhitespace />
					</java>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>